@@ -1,3 +1,10 @@
+2011-09-12  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/symbols.c:
+   Fix updating symbol list for overloaded C++ symbols (closes
+   #3406644).
+
+
 2011-09-02  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/ui_utils.c:
